fix: Sonar code smells